{
    "name": "PlayerMovements",
    "maps": [
        {
            "name": "Movement",
            "id": "b2a54fa9-a7ae-4860-87ff-51e7bb0634e0",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "46e4f5fc-79c2-4536-a25b-adfa0f1f3f62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Backward",
                    "type": "Button",
                    "id": "13867e5e-8489-44a8-9d74-8c110ba57f08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "f12cebdf-4b93-4866-90f7-5b1213e2cf5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "59bbeccf-db2b-4c12-8e98-e2543831b6fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2893d072-9283-4418-a77b-01ff40e118b6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90f400ef-ce6d-4287-b5b9-f59fcfb5319d",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b77f2889-40e7-4c8b-8b15-35c50b5a9c34",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95f7262c-a7c7-4b1d-bf95-7d166516e525",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a161e1f6-c877-4e00-b56a-5d31110220c8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cec531c4-3378-4301-950d-9399cb716d47",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecf332a2-263e-4e21-8800-dd8a4bd61ea9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29f89f3f-5c6c-47fd-a74f-7666df0efeda",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Parkour",
            "id": "2d0c2477-88ae-4874-816d-2aea46bdc665",
            "actions": [
                {
                    "name": "Jumping",
                    "type": "Button",
                    "id": "065b172a-c44e-408d-9052-78ab9419a43e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprinting",
                    "type": "Button",
                    "id": "7bd8debe-7e3b-4169-905a-08528ae5fd14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "339fa5b7-f411-40d9-a474-fb5bfd5f84b4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jumping",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73803735-b5c8-4bea-9c03-0853043a91ff",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jumping",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf61968b-ecdd-4069-bbad-34b4560479ea",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprinting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ab0380d-c7de-487a-a17e-7d35d7868773",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprinting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Look",
            "id": "e7657310-4c59-479b-b871-32a8c56b7b82",
            "actions": [
                {
                    "name": "LookRotationX",
                    "type": "Value",
                    "id": "b991d9fd-c9e2-4b23-80c4-74237b27cb38",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookRotationY",
                    "type": "Value",
                    "id": "a370af95-e053-41c2-a016-586165c02e51",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3a57c194-5527-490e-bc5a-56fde7016910",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookRotationX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45500041-f711-4ff4-b9d1-ad92bfc65a33",
                    "path": "<Touchscreen>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookRotationX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d74fa40f-64ad-4f41-9abc-3f894a69a827",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookRotationY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbe7ed7d-6883-4959-93aa-e10d65c78a43",
                    "path": "<Touchscreen>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookRotationY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Shoot",
            "id": "13398b4a-9984-43dc-ab82-a9f1fb412ba8",
            "actions": [
                {
                    "name": "ShootBullet",
                    "type": "Button",
                    "id": "ae0e232f-9f56-40ab-a0fe-b80408dd1f1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AimGun",
                    "type": "Button",
                    "id": "16a55a11-ff12-46b7-b620-fd44f6373e88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "edb25c36-2820-43c2-b95f-b8f2bf903d54",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c279bc4-8106-4a72-a758-ba6f6715fc58",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "638ce36e-d9cf-4989-8a3f-c4f1a3fb7ef2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5b6620f-6283-450d-baf1-7b3ea9e9a309",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}